# rhtpa

./: .containerignore  .dockerignore  .gitignore  CONVENTIONS.md  Cargo.toml  Containerfile  Dockerfile  README.md  RELEASE.md  TODO.md  data-migration.yaml  deny.toml  entrypoint.sh  openapi.yaml  rust-toolchain.toml  test.sh
.github/: pull.yml
.github/scripts/: Containerfile  Containerfile.pmmode  Containerfile.xtask  dev-build.sh
.tekton/: basic-it.yaml  basic-it.yml  rhtpa-pull-request.yaml  rhtpa-push.yaml
cli/: Cargo.toml  README.md
cli/src/: cli.rs  main.rs
cli/src/api/: auth.rs  client.rs  sbom.rs
cli/src/commands/: auth.rs  mod.rs
common/: Cargo.toml
common/db/: Cargo.toml
common/db/src/: embedded.rs  lib.rs
cvss/: Cargo.toml
docs/: development.md  env-vars.md  glossary.md  oidc.md  otel.md  test-snapshots.md
e2e/: Cargo.toml
entity/: Cargo.toml
etc/trustify-cli/: Cargo.toml  README.md
etc/trustify-cli/src/: config.rs  main.rs  utils.rs
etc/trustify-cli/src/api/: advisory.rs  client.rs  mod.rs  sbom.rs  test.rs
etc/trustify-cli/src/commands/: advisory.rs  auth.rs  mod.rs  sbom.rs  test.rs
etc/trustify-cli/src/common/: mod.rs
migration/: Cargo.toml
migration/src/: lib.rs  m0000010_init.rs  m0001140_expand_spdx_licenses_function.rs  m0001150_case_license_text_sbom_id_function.rs  m0001160_improve_expand_spdx_licenses_function.rs  m0001170_non_null_source_document_id.rs  m0001180_expand_spdx_licenses_with_mappings_function.rs  m0001190_optimize_product_advisory_query.rs  m0001200_source_document_fk_indexes.rs  m0001210_csaf_remediations.rs  m0001300_restore_get_purl.rs  m0002000_add_sbom_properties.rs  m0002000_example_data_migration.rs  m0002010_add_advisory_scores.rs  m0002010_example_advisory_data_migration.rs  m0002020_add_sbom_group.rs  m0002030_create_ai.rs  m0002040_create_crypto.rs  m0002070_alter_sbom_group_restrict_parent.rs  m0002090_vulnerability_id_sort_index.rs  m0002100_analysis_perf_indexes.rs  m0002110_license_query_performance.rs  m0002110_sbom_describing_cpe.rs  m0002120_ancestor_walk_index.rs  m0002120_normalize_expanded_license.rs  m0002130_add_ai_model_purl.rs  m0002130_add_csaf_product_id.rs  m0002130_fix_ref_fk.rs  m0002130_sbom_ancestor.rs  m0002140_p2p_right_index.rs  m0002150_fix_advisory_labels_index.rs  m0002160_fix_ref_fk.rs  m0002170_drop_cvss_tables.rs  m0002180_advisory_fk_indexes.rs  m0002190_vulnerability_base_score_advisory.rs  m0002200_source_document_ingested_index.rs  m0002210_sbom_node_name_index.rs  m0002220_drop_qualified_purl_gist_indexes.rs  m0002230_sle_license_id_index.rs  m0002240_product_version_sbom_index.rs  (+2 more)
migration/src/data/: migration.rs  mod.rs  partition.rs  run.rs
migration/src/data/document/: advisory.rs  mod.rs  sbom.rs
migration/src/m0001140_expand_spdx_licenses_function/: expand_up.sql
migration/src/m0001150_case_license_text_sbom_id_function/: function_up.sql
migration/src/m0001160_improve_expand_spdx_licenses_function/: improve_expand_up.sql
migration/src/m0001180_expand_spdx_licenses_with_mappings_function/: down.sql  up.sql
migration/src/m0002110_license_query_performance/: down.sql  up.sql
migration/src/m0002120_normalize_expanded_license/: bench_expand.sql  down.sql  up.sql
migration/src/m0002160_fix_ref_fk/: down.sql  up.sql
migration/src/m0002170_drop_cvss_tables/: down.sql
migration/src/m0002190_vulnerability_base_score_advisory/: up.sql
migration/tests/: data.rs  previous.rs  tests.rs
migration/tests/data/: m0002010.rs  main.rs
pipelines/: it-tests.yaml  tests.yaml
query/: Cargo.toml
server/: Cargo.toml
src/: auth.rs  config.rs  main.rs
tasks/: tests.yaml
test-context/: Cargo.toml
tools/perf/: .gitignore  Makefile  README.md  auth.py  config.py  locustfile.py  pyproject.toml  scenario.py
tools/perf/etc/scenarios/: empty.json5
tools/perf/etc/scenarios/main/: full-20250323.json5  full-20250604.json5  full-20260317T023702Z.json5  full-20260412.json5
tools/perf/etc/scenarios/releases/0.4.z/: full-20260412_atlas.json5  full-20260412_qe_atlas.json5
tools/perf/users/: base.py  website.py
tools/perf/users/v2/: analysis.py  rest_api.py  rest_api_slow.py
tools/perf/users/v3/: analysis.py  labels.py  rest_api.py  rest_api_slow.py
trustd/: Cargo.toml
xtask/: Cargo.toml
(+591 files in other folders)
