[package]
name = "trustify-cli"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "trustify"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
dotenvy = { workspace = true }
futures = { workspace = true }
indicatif = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "form", "json", "query"] }
log = { workspace = true }
serde = { workspace = true , features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync"] }
chrono = { workspace = true, features = ["serde", "clock"] }
