[package]
name = "trustify-migration"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
trustify-common = { workspace = true }
trustify-entity = { workspace = true }
trustify-module-ingestor = { workspace = true }
trustify-module-storage = { workspace = true }

anyhow = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
csaf = { workspace = true }
cve = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
humantime = { workspace = true }
indicatif = { workspace = true, features = ["tokio", "futures"] }
osv = { workspace = true, features = ["schema"] }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true, features = ["runtime-tokio-rustls", "sqlx-postgres", "with-uuid"] }
serde-cyclonedx = { workspace = true }
serde_json = { workspace = true }
spdx-rs = { workspace = true }
strum = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true, features = ["v5"] }

[dev-dependencies]
trustify-common = { workspace = true }
trustify-db = { workspace = true }
trustify-entity = { workspace = true }
trustify-test-context = { workspace = true }

anyhow = { workspace = true }
test-context = { workspace = true }
test-log = { workspace = true, features = ["log", "trace"] }
tokio-util = { workspace = true }
