[package]
name = "trustify-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "trustify"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, features = ["derive", "env"] }
dotenvy = { workspace = true }
futures = { workspace = true }
indicatif = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "json"] }
serde = { workspace = true , features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync"] }

[dev-dependencies]
mockall = { workspace = true }
wiremock = { workspace = true }

