[project]
name = "trustify-perf"
version = "0.1.0"
description = "Locust-based performance tests for trustify"
requires-python = ">=3.13"
dependencies = [
    "locust==2.37.5",
    "json5==0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["users"]

[tool.hatch.build.targets.wheel.force-include]
"config.py" = "config.py"
"scenario.py" = "scenario.py"